Various fixes
This pull request addresses several issues related to the compiler and tests in the current main branch.

The first major change involves replacing ImmutableOpenMap with java.util.Map in the core. This modification is implemented in the following pull requests:

https://github.com/opensearch-project/OpenSearch/pull/7165
https://github.com/opensearch-project/OpenSearch/pull/7301

To accommodate this change, the codebase of the AD (Anomaly Detection) module has been refactored to utilize JDK maps. As a consequence of this change, passing null to the custom parameters of ClusterState is no longer permissible, as it leads to a NullPointerException. The error stack trace is as follows:

java.lang.NullPointerException: Cannot invoke "Object.getClass()" because "m" is null
    at __randomizedtesting.SeedInfo.seed([60CDDB34427ACD0C:6E72DB4ED18E018D]:0)
    at java.base/java.util.Collections.unmodifiableMap(Collections.java:1476)
    at org.opensearch.cluster.ClusterState.<init>(ClusterState.java:219)
    at org.opensearch.ad.transport.DeleteAnomalyDetectorTests.createClusterState(DeleteAnomalyDetectorTests.java:216)
    at org.opensearch.ad.transport.DeleteAnomalyDetectorTests.testDeleteADTransportAction_LatestDetectorLevelTask(DeleteAnomalyDetectorTests.java:160)

To address this issue, we have replaced the usage of null with new HashMap<>().

The second change in this pull request aligns with the modifications introduced in PR https://github.com/opensearch-project/anomaly-detection/pull/878.

The third issue is related to the incompatibility between tests that utilize the @Parameters annotation and those that do not, as explained in https://tinyurl.com/2y265s2w. Specifically, the SearchFeatureDaoTests class runes tests with the @Parameters annotation, whereas SearchFeatureDao tests do not.

Testing done:
1. gradle build.

Signed-off-by: Kaituo Li <kaituo@amazon.com>