@@ -34,7 +34,7 @@ buildscript {
         js_resource_folder = "src/test/resources/job-scheduler"
         common_utils_version = System.getProperty("common_utils.version", opensearch_build)
         job_scheduler_version = System.getProperty("job_scheduler.version", opensearch_build)
-        bwcVersionShort = "2.7.0"
+        bwcVersionShort = "2.8.0"
         bwcVersion = bwcVersionShort + ".0"
         bwcOpenSearchADDownload = 'https://ci.opensearch.org/ci/dbc/distribution-build-opensearch/' + bwcVersionShort + '/latest/linux/x64/tar/builds/' +
                 'opensearch/plugins/opensearch-anomaly-detection-' + bwcVersion + '.zip'
@@ -67,7 +67,8 @@ plugins {
     id 'nebula.ospackage' version "8.3.0" apply false
     id "com.diffplug.gradle.spotless" version "3.26.1"
     id 'java-library'
-    id 'org.gradle.test-retry' version '1.3.1'
+    // Gradle 7.6 support was added in test-retry 1.4.0.
+    id 'org.gradle.test-retry' version '1.4.1'
 }
 
 tasks.withType(JavaCompile) {
@@ -77,6 +78,14 @@ tasks.withType(Test) {
     systemProperty "file.encoding", "UTF-8"
     jvmArgs("--add-opens", "java.base/java.time=ALL-UNNAMED")
     jvmArgs("--add-opens", "java.base/java.util.stream=ALL-UNNAMED")
+
+    // PowerMock related tests like SearchFeatureDaoTests relies on modifying the bytecode of
+    // classes during runtime, which can conflict with the module system introduced in Java 9.
+    // To resolve this issue, we use the --add-opens option to explicitly open the java.util
+    // and java.lang package to PowerMock. This option allows PowerMock to access non-public
+    // members of the java.util and java.lang package.
+    jvmArgs('--add-opens', 'java.base/java.util=ALL-UNNAMED')
+    jvmArgs('--add-opens', 'java.base/java.lang=ALL-UNNAMED')
 }
 tasks.withType(Javadoc) {
     options.encoding = 'UTF-8'
